FIX: padding on small screen

--- a/assets/stylesheets/styles.sass
+++ b/assets/stylesheets/styles.sass
@@ -52,7 +52,7 @@ a
 .container
   max-width: $container-size
   margin: 0 auto
-  padding: $padding * 2
+  padding: $padding * 2 $padding
 
 .title
   text-align: center
